--- a/hello_world.yml
+++ b/hello_world.yml
@@ -5,4 +5,10 @@
     - name: Hello Message
       debug:
         msg: "Hello World!"
-    
+
+    - name: Get hostname
+      ansible.windows.win_hostname:
+
+    - name: Get hostname
+      win_shell: |
+        Write-Host "Hello World from Uzair!"
