--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,6 @@
 ---
 collections:
   - name: community.docker
-    version: ">=1.10.0"
+    version: "4.6.1"
+  - name: kubernetes.core
+    version: "5.3.0"
