--- a/docker_nginx_webapp.yml
+++ b/docker_nginx_webapp.yml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy nginx container with custom webpage (AWX Server)
-  hosts: UbuntuHost
+  hosts: 192.168.5.8
   gather_facts: no
 
   vars:
