--- a/requirements.yml
+++ b/requirements.yml
@@ -4,3 +4,5 @@ collections:
     version: "4.6.1"
   - name: kubernetes.core
     version: "5.3.0"
+  - name: junipernetworks.junos
+    version: "9.1.0"
