--- a/vSRX_gf.yml
+++ b/vSRX_gf.yml
@@ -1,11 +1,10 @@
 ---
 - name: Get Juniper hostname and configure interface
   hosts: all
-  connection: ansible.netcommon.network_cli
-  gather_facts: no
-  vars:
-    ansible_network_os: junos
-    ansible_connection: ansible.netcommon.network_cli
+  ansible_connection: ansible.netcommon.netconf
+  ansible_network_os: junos
+  ansible_user: admin
+  ansible_ssh_private_key_file: /runner/env/ssh_key_data
 
   tasks:
 
