--- a/requirements.yml
+++ b/requirements.yml
@@ -6,3 +6,5 @@ collections:
     version: "5.3.0"
   - name: junipernetworks.junos
     version: "9.1.0"
+  - name: azure.azcollection
+    version: "3.4.0"
