--- a/3-Create_Azure_RG.yml
+++ b/3-Create_Azure_RG.yml
@@ -4,26 +4,33 @@
   connection: local
   gather_facts: false
 
+  vars:
+  azure_client_id: "{{ lookup('env', 'AZURE_CLIENT_ID') }}"
+  azure_secret: "{{ lookup('env', 'AZURE_SECRET') }}"
+  azure_tenant: "{{ lookup('env', 'AZURE_TENANT') }}"
+  azure_subscription_id: "{{ lookup('env', 'AZURE_SUBSCRIPTION_ID') }}"
+  
   tasks:
-    - name: Ensure .azure directory exists
-      file:
-        path: /home/ansible/.azure
-        state: directory
-        mode: 0700
+    - name: Log in to Azure using az login
+      shell: |
+        az login --service-principal \
+                 --username "{{ azure_client_id }}" \
+                 --password "{{ azure_secret }}" \
+                 --tenant "{{ azure_tenant }}"
+      register: login_output
 
-    - name: Write Azure JSON credentials to ~/.azure/azureProfile.json
-      copy:
-        content: "{{ lookup('env', 'AZURE_AUTH_JSON') }}"
-        dest: /home/ansible/.azure/azureProfile.json
-        mode: 0600
-    
-    - name: Show path to written Azure profile (debug only)
-      command: cat /home/ansible/.azure/azureProfile.json
-      register: output
+    - name: Set default subscription
+      shell: az account set --subscription "{{ azure_subscription_id }}"
+      when: login_output.rc == 0
 
-    - name: Print output
-      debug:
-        var: output.stdout
+    - name: Show current Azure account
+      shell: az account show
+      register: az_account
+      changed_when: false
+
+    - debug:
+        var: az_account.stdout
+
 
 
     - name: Create a resource group named 'RG-AWX'
