Changed az login syntax

--- a/3-Create_Azure_RG.yml
+++ b/3-Create_Azure_RG.yml
@@ -13,10 +13,7 @@
   tasks:
     - name: Log in to Azure using az login
       shell: |
-        az login --service-principal \
-                 --username "{{ azure_client_id }}" \
-                 --password "{{ azure_secret }}" \
-                 --tenant "{{ azure_tenant }}"
+        az login --service-principal -u "{{ azure_client_id }}" -p "{{ azure_secret }}" --tenant "{{ azure_tenant }}"
       register: login_output
 
     - name: Set default subscription
