--- a/3-Create_Azure_RG.yml
+++ b/3-Create_Azure_RG.yml
@@ -3,38 +3,37 @@
   hosts: localhost
   connection: local
   gather_facts: false
-
-  vars:
-    azure_client_id: "{{ lookup('env', 'AZURE_CLIENT_ID') }}"
-    azure_secret: "{{ lookup('env', 'AZURE_SECRET') }}"
-    azure_tenant: "{{ lookup('env', 'AZURE_TENANT') }}"
-    azure_subscription_id: "{{ lookup('env', 'AZURE_SUBSCRIPTION_ID') }}"
   
   tasks:
     - name: Display AZURE_CLIENT_ID
       debug:
-        msg: "AZURE_CLIENT_ID = {{ lookup('env', 'AZURE_CLIENT_ID') }}"
+        msg: "AZURE_CLIENT_ID = {{ AZURE_CLIENT_ID }}"
 
     - name: Display AZURE_TENANT
       debug:
-        msg: "AZURE_TENANT = {{ lookup('env', 'AZURE_TENANT') }}"
+        msg: "AZURE_TENANT = {{ AZURE_TENANT }}"
 
     - name: Display AZURE_SUBSCRIPTION_ID
       debug:
-        msg: "AZURE_SUBSCRIPTION_ID = {{ lookup('env', 'AZURE_SUBSCRIPTION_ID') }}"
+        msg: "AZURE_SUBSCRIPTION_ID = {{ AZURE_SUBSCRIPTION_ID }}"
 
     - name: Display AZURE_SECRET (only for debug - remove in production)
       debug:
-        msg: "AZURE_SECRET = {{ lookup('env', 'AZURE_SECRET') }}"
+        msg: "AZURE_SECRET = {{ AZURE_SECRET }}"
       no_log: false  # Set to true before production
 
     - name: Log in to Azure using az login
       shell: |
-        az login --service-principal -u "{{ azure_client_id }}" -p "{{ azure_secret }}" --tenant "{{ azure_tenant }}"
+        az login --service-principal -u "{{ AZURE_CLIENT_ID }}" -p "{{ AZURE_SECRET }}" --tenant "{{ AZURE_TENANT }}"
+      environment:
+        AZURE_CLIENT_ID: "{{ AZURE_CLIENT_ID }}"
+        AZURE_SECRET: "{{ AZURE_SECRET }}"
+        AZURE_TENANT: "{{ AZURE_TENANT }}"
+        AZURE_SUBSCRIPTION_ID: "{{ AZURE_SUBSCRIPTION_ID }}"
       register: login_output
 
     - name: Set default subscription
-      shell: az account set --subscription "{{ azure_subscription_id }}"
+      shell: az account set --subscription "{{ AZURE_SUBSCRIPTION_ID }}"
       when: login_output.rc == 0
 
     - name: Show current Azure account
